
* GITHUB#13332: Improve MissingDoclet linter to check records correctly. (Uwe Schindler)

======================== Lucene 9.12.0 =======================

API Changes
---------------------

* GITHUB#13281: Mark COSINE VectorSimilarityFunction as deprecated. (Pulkit Gupta)

* GITHUB#13469: Expose FlatVectorsFormat as a first-class format; can be configured using a custom Codec. (Michael Sokolov) 

New Features
---------------------

* GITHUB#13430: Allow configuring the search concurrency via
  TieredMergePolicy#setTargetSearchConcurrency. This in-turn instructs the
  merge policy to try to have at least this number of segments on the highest
  tier. (Adrien Grand, Carlos Delgado)

* GITHUB#13517: Allow configuring the search concurrency on LogDocMergePolicy
  and LogByteSizeMergePolicy via a new #setTargetConcurrency setter.
  (Adrien Grand)

Improvements
---------------------

* GITHUB#13548: Refactor and javadoc update for KNN vector writer classes. (Patrick Zhai)

* GITHUB#13562: Add Intervals.regexp and Intervals.range methods to produce  IntervalsSource
  for regexp and range queries. (Mayya Sharipova)

Optimizations
---------------------

* GITHUB#13439: Avoid unnecessary memory allocation in PackedLongValues#Iterator. (Zhang Chao)

* GITHUB##13425: Rewrite SortedNumericDocValuesRangeQuery to MatchNoDocsQuery when the upper bound is smaller than the
  lower bound. (Ioana Tagirta)

* GITHUB#13322: Implement Weight#count for vector values in the FieldExistsQuery. (Pan Guixin)

* GITHUB#13454: MultiTermQuery returns null ScoreSupplier in cases where
  no query terms are present in the index segment (Mayya Sharipova)

* GITHUB#13431: Replace TreeMap and use compiled Patterns in Japanese UserDictionary. (Bruno Roustant)

* GITHUB#12941: Don't preserve auxiliary buffer contents in LSBRadixSorter if it grows. (Stefan Vodita)

* GITHUB#13175: Stop double-checking priority queue inserts in some FacetCount classes. (Jakub Slowinski)
